# Be-Team---TeamManagemnt---Backend---Database

./: .env_example  .gitignore  pyproject.toml
src/: __init__.py  main.py
src/conf/: __init__.py  settings.py
src/core/: __init__.py  dependencies.py  exceptions.py  security.py
src/database/: __init__.py  base.py  engine.py  enums.py  init.py  mixin.py  repository.py  session.py
src/modules/: __init__.py  m2m.py
src/modules/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
src/modules/project/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/task/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/team/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/team_members/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/technology/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/user/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
static/: index.html
static/css/: style.css
static/js/: app.js
static/js/core/: api.js  ui.js
static/js/domains/: auth.js  projects.js  tasks.js  team_members.js  teams.js  tech.js  users.js
