[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy[asyncio]>=2.0.35",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "faker>=30.1.0",
    "httpx>=0.27.2",
]